fix(utilities): allow multi-dimensional values
prevents text-truncate from outputting invalid css

--- a/packages/vuetify/src/styles/tools/_utilities.sass
+++ b/packages/vuetify/src/styles/tools/_utilities.sass
@@ -37,9 +37,12 @@
   // Don't prefix if value key is null (eg. with shadow class)
   $property-class-modifier: if(nth($value, 1), "-" + nth($value, 1), "")
 
-  $value: nth(nth($value, 2), 1)
-  $value: nth($value, length($value))
+  $value: nth($value, 2)
 
   .#{$property-class + $infix + $property-class-modifier}
-    @each $property in $properties
-      #{$property}: $value !important
+    @for $i from 1 through length($properties)
+      $property: nth($properties, $i)
+      $val: $value
+      @if type-of($value) == 'list' and length($properties) == length($value)
+        $val: nth($value, $i)
+      #{$property}: $val !important
